# StoryWeaver

./: .env  package-lock.json  package.json  tailwind.config.js
backend/: package.json
backend/mythforge/: Anchor.toml  package-lock.json  package.json
backend/mythforge/keys/: fee_account.json  platform_wallet.json
backend/mythforge/programs/mythforge/: Cargo.toml
backend/mythforge/programs/mythforge/src/: lib.rs
backend/mythforge/tests/: mythforge.ts
backend/server/: .env  create-mint.js  index.js  keypair.json  mongo.js  mythforge.json  package-lock.json  package.json  test-mongo.js
frontend/: .env  .eslintrc.cjs  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: Editor.tsx  WalletButton.tsx
frontend/src/pages/: Dashboard.tsx  Editor.tsx  Home.tsx  MintNFT.tsx  Reader.tsx  Sample.tsx
frontend/src/utils/: solana.ts
src/: App.tsx  main.tsx
src/pages/: Landing.tsx  Reader.tsx  TestQuickNode.tsx
