[package]
name = "mythforge"
version = "0.1.0"
description = "StoryWeaver NFT minting program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mythforge"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
mpl-token-metadata = { version = "5.1.0", features = ["serde"] }

[dev-dependencies]
anchor-client = "0.31.1"